--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,13 @@
                 <version>2.0.20</version>
             </dependency>
 
-     <!--       &lt;!&ndash;热更新&ndash;&gt;
+            <!--热更新-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-devtools</artifactId>
                 <optional>true</optional>
-            </dependency>-->
+            </dependency>
 
             <!--  httpclient  -->
             <dependency>
@@ -92,6 +92,20 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <fork>true</fork>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork><!--必须添加这个配置-->
+                    <addResources>true</addResources>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
